syntax = "proto3";

option go_package = "pbfile/service";

package service;

service ServerService {
  rpc AddCustomer(AddReq) returns (Confirmation) {}
  rpc RetrieveCustomer(GetReq) returns (Customer) {}
  rpc DeleteCustomer(DeleteReq) returns (Confirmation) {}
  rpc GetAllCustomers(GetAllReq) returns (Customers) {}
}

message GetAllReq {
  string dbName = 1;
}

message AddReq {
  int32 id = 1;
  string name = 2;
}

message DeleteReq {
  int32 id = 1;
}

message GetReq {
  int32 id = 1;
  string name = 2;
}

message Confirmation {
  string confirmation = 1;
}

message Customer {
  int32 id = 1;
  string name = 2;
}

message Customers {
  repeated Customer customers = 1;
}